[package]
name = "wordplay"
version = "0.1.0"
authors = ["Christopher Speck <die.drachen@gmail.com>"]
edition = "2018"
build = "build/build.rs"

[dependencies]

[build-dependencies]
phf = { git = "https://github.com/neandrake/rust-phf", branch = "fmtconst-string" }
phf_codegen = { git = "https://github.com/neandrake/rust-phf", branch = "fmtconst-string" }
itertools = "0.9"
