[package]
name = "wordplay"
version = "0.1.0"
authors = ["Christopher Speck <die.drachen@gmail.com>"]
edition = "2018"
build = "build/build.rs"

[dependencies]
anyhow = "1.0"
itertools = "0.9"
phf = { git = "https://github.com/neandrake/rust-phf", branch = "fmtconst-string" }
structopt = "0.3"

[build-dependencies]
phf = { git = "https://github.com/neandrake/rust-phf", branch = "fmtconst-string" }
phf_codegen = { git = "https://github.com/neandrake/rust-phf", branch = "fmtconst-string" }
itertools = "0.9"
